--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                                         <div class="about-desc">
                                             <span class="heading-meta">About Us</span>
                                             <h2 class="colorlib-heading">Who Am I?</h2>
-                                            <p><strong>Hi I'm Waris Ali</strong> I am a highly-motivated full-stack web engineer from Bangalore, India. My expertise lies in building Full Stack Web Applications, Hybrid Mobile Applications. I have experience
+                                            <p><strong>Hi I'm Waris Ali</strong> I a highly-motivated full-stack web engineer from Bangalore, India. My expertise lies in building Full Stack Web Applications, Hybrid Mobile Applications. I have experience
                                                 with a variety of tech stacks, with proven ability to pick up new technologies quickly.</p>
                                             <p>I am currently employed as a Senior Software Analyst <a href="http://iprocessdata.com">@iProcess Data System</a> to further grow my ability to build for the web. I'm highly interested in Data Science and Cloud
                                                 Computing
